Bug fix: actions link in page header was only appearing on small breakpoint, not medium

--- a/app/assets/sass/_modules.scss
+++ b/app/assets/sass/_modules.scss
@@ -138,7 +138,7 @@
     display:block;
     top:8px;
     right:10px;
-    @include breakpoint($m) { display:none; }
+    @include breakpoint($l) { display:none; }
   }
   nav {
     @include clearfix();
